# calculator-serverless

./: Cargo.toml
functions/calc/: Cargo.toml
functions/calc/src/: main.rs
src/: main.rs
