[package]
name = "calculator-serverless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
precise-calc = "0.1.1"
aws-config = "0.55.1"
tokio = { version = "1.28.0", features = ["full"] }
lambda_runtime = "0.8.0"
serde = "1.0.160"
serde_derive = "1.0.160"
serde_json = "1.0.96"
